<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/outer_margin"
        android:textSize="16dp"
        android:textColor="@android:color/black"
        android:text="@string/thanksforfeedback"/>

    <CheckBox
        android:id="@+id/geo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geography"
        android:layout_marginLeft="@dimen/outer_margin"/>

    <CheckBox
        android:id="@+id/pol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/politics"
        android:layout_marginLeft="@dimen/outer_margin"/>

    <CheckBox
        android:id="@+id/his"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_marginLeft="@dimen/outer_margin"/>

    <CheckBox
        android:id="@+id/mus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:layout_marginLeft="@dimen/outer_margin"/>

    <CheckBox
        android:id="@+id/spo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:layout_marginLeft="@dimen/outer_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="16dp"
        android:textColor="@android:color/black"
        android:text="@string/other"/>

    <EditText
        android:id="@+id/other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/outer_margin"
        android:maxLines="2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/outer_margin"
        android:layout_gravity="center"
        android:text="@string/send"
        android:onClick="sendFeedback"/>

</LinearLayout>

    <Button
        android:id="@+id/newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_alignParentLeft="true"
        android:layout_marginVertical="@dimen/outer_margin"
        android:layout_marginLeft="@dimen/outer_margin"
        android:text="@string/new_game"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_alignParentRight="true"
        android:layout_marginVertical="@dimen/inner_margin"
        android:layout_marginRight="@dimen/outer_margin"
        android:text="@string/quitarrow"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:background="@android:color/transparent"/>

    </RelativeLayout>

</ScrollView>